src-tauri/compile_errors_v35.txt
cargo :     Checking 
qurancaption v3.3.0 (C
:\Users\techo\Desktop\
QuranCaption\src-tauri
)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 
compile_errors_v35.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng qu...tion\src-    
tauri):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: unused 
import: 
`std::sync::Arc`
 --> 
src\renderer.rs:1:5
  |
1 | use 
std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: 
`tokio::sync::Mutex 
as TokioMutex`
 --> 
src\renderer.rs:2:5
  |
2 | use 
tokio::sync::Mutex as 
TokioMutex;
  |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`Resolution`, 
`Weight`, and 
`cosmic_text::Align`
 --> 
src\renderer.rs:6:73
  |
6 | ...FontSystem, 
Metrics, Resolution, 
Shaping, SwashCache, 
TextAtlas, TextArea, 
TextBounds, Weight, 
cosmic_text::Align};
  |                   
      ^^^^^^^^^^      
                      
                      
      ^^^^^^  
^^^^^^^^^^^^^^^^^^

error[E0061]: this 
function takes 17 
arguments but 15 
arguments were 
supplied
    --> 
src\exporter.rs:1287:5
     |
1287 |       start_str
eaming_export(
     |       
^^^^^^^^^^^^^^^^^^^^^^
...
1301 | /         
is_high_fidelity,
1302 | |         
app_handle,
     | 
|__________________- 
two arguments of type 
`std::option::Option<s
td::string::String>` 
and `std::option::Opti
on<f64>` are missing
     |
note: function 
defined here
    --> src\exporter.r
s:1585:14
     |
1585 | pub async fn st
art_streaming_export(
     |              
^^^^^^^^^^^^^^^^^^^^^^
...
1599 |     
overlay_color: 
Option<String>,
     |     -----------
------------------
1600 |     
overlay_opacity: 
Option<f64>,
     |     -----------
-----------------
help: provide the 
arguments
     |
1287 |     start_strea
ming_export(
 ...
1300 |         blur,
1301 ~         /* std:
:option::Option<std::s
tring::String> */,
1302 +         /* std:
:option::Option<f64> 
*/,
1303 ~         
is_high_fidelity,
     |

warning: variable 
does not need to be 
mutable
    --> 
src\exporter.rs:1507:9
     |
1507 |     let mut 
child = cmd.spawn()
     |         
----^^^^^
     |         |
     |         help: 
remove this `mut`
     |
     = note: 
`#[warn(unused_mut)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: value 
assigned to 
`durations_s` is 
never read
   --> 
src\exporter.rs:608:27
    |
608 |     let mut 
durations_s = 
Vec::new();
    |                 
          ^^^^^^^^^^
    |
    = help: maybe it 
is overwritten before 
being read?
    = note: `#[warn(un
used_assignments)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `remain`
   --> 
src\exporter.rs:748:17
    |
748 |             let 
remain = duration_s - 
total_bg_s;
    |                 
^^^^^^ help: if this 
is intentional, 
prefix it with an 
underscore: `_remain`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: 
`timestamps_ms`
    --> 
src\exporter.rs:1588:5
     |
1588 |     
timestamps_ms: 
Vec<i32>,
     |     
^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_timestamps_ms`

warning: unused 
variable: 
`opacity_hex`
   --> 
src\renderer.rs:115:17
    |
115 |             let 
opacity_hex = 
format!("{:02x}", 
(overlay_opacity * 
255.0) as u32);
    |                 
^^^^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_opacity_hex`

For more information 
about this error, try 
`rustc --explain 
E0061`.
warning: 
`qurancaption` (lib) 
generated 8 warnings
error: could not 
compile 
`qurancaption` (lib) 
due to 1 previous 
error; 8 warnings 
emitted
